--- a/Backend/RabbitMQ.Service.One/appsettings.json
+++ b/Backend/RabbitMQ.Service.One/appsettings.json
@@ -7,9 +7,9 @@
     "Console": {
       "IncludeScopes": true,
       "LogLevel": {
-        "Default": "Information"
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
       }
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
